src/components/InventoryList/InventoryList.scss
@use "../../styles/partials/variables.scss" as *;
@use "../../styles/partials/mixins.scss" as *;

.inventory-table {
  display: flex;
  flex-direction: column;

  @include tablet {
    display: grid;
    gap: 0.0625rem;
  }

  &__header {
    display: none;

    @include tablet {
      display: grid;
      grid-template-columns: 1fr 1fr 1fr 1fr 0.5fr 0.5fr;
      background-color: $background-color-2;
      width: 100%;
      padding: 0.5rem 2rem;
    }

    @include desktop {
      grid-template-columns: 1fr 1.5fr 1fr 1fr 0.5fr 0.5fr;
      padding: 0.5rem 2.5rem;
    }

    &--detail {
      @include tablet {
        grid-template-columns: 1fr 1fr 1fr 1fr 0.5fr;
      }
      @include desktop {
        grid-template-columns: 1.2fr 0.9fr 1.2fr 0.5fr 1fr;
      }
    }
  }

  &__row {
    display: flex;
    flex-direction: row-reverse;
    border-top: 0.0625rem solid $secondary-color-2;
    padding: 1.25rem 2rem 1.25rem;
    flex-wrap: wrap;

    @include tablet {
      display: grid;
      grid-template-columns: 1fr 1fr 1fr 1fr 0.5fr 0.5fr;
      font-weight: bold;
      border-bottom: 0.0625rem solid $secondary-color-2;
      border-top: 0;
      padding: 0 2rem 1.25rem;
      margin-bottom: 0;
    }

    &:hover {
      background-color: rgba(46, 102, 229, 0.07);
    }

    @include desktop {
      padding: 0 2.5rem 1.25rem;
      grid-template-columns: 1fr 1.5fr 1fr 1fr 0.5fr 0.5fr;
    }

    &--detail {
      @include tablet {
        margin-right: 0;
        grid-template-columns: 1fr 1fr 1fr 1fr 0.5fr;
      }
      @include desktop {
        grid-template-columns: 1.2fr 0.9fr 1.2fr 0.5fr 1fr;
      }
    }
  }

  &__cell-pair {
    display: flex;
    flex-direction: column;
    margin-bottom: 0.5rem;
    width: 50%;
    padding-top: 1.25rem;

    @include tablet {
      display: flex;
      min-width: 6.25rem;
      width: 100%;
      margin-bottom: 0;
      align-self: center;
    }

    @include desktop {
      width: max-content;
      text-align: center;
    }
  }

  &__header-cell {
    display: none;

    @include tablet {
      display: flex;
      padding: 0.625rem 0;
      @include h4-font-tab;
      align-items: center;
      color: $secondary-color-1;
      width: max-content;
    }

    &--actions {
      display: none;

      @include tablet {
        display: grid;
        text-align: right;
        width: 100%;
      }
    }
  }

  &__sort-button {
    background: none;
    border: none;
    cursor: pointer;
    display: inline-flex;
    align-items: center;
  }

  &__sort-arrow {
    width: 1rem;
    margin-left: 0.3125rem;
  }

  &__title {
    font-weight: 600;
    margin-right: 0.5rem;
    padding-bottom: 0.25rem;
    @include h4-font-mob;
    color: $secondary-color-1;

    @include tablet {
      display: none;
    }
  }

  &__link {
    @include h3-font-mob;
    font-weight: 400;
    color: $primary-color-2;
    text-decoration: none;
    display: flex;
    align-items: center;
    gap: 0.25rem;
    text-decoration: none;

    &--name {
      text-decoration: none;
    }

    &:hover &--name {
      text-decoration: underline;
    }
  }

  &__arrow {
    width: 1.25rem;
    height: 1.25rem;
  }

  &__content {
    @include h3-font-mob;
    font-weight: 400;

    @include tablet {
      text-align: left;
    }
  }

  &__status {
    @include h4-font-mob;
    height: 1.5rem;
    padding: 0 0.5rem;
    line-height: 1.5rem;
    background-color: $supporting-background-color-1;
    color: $supporting-color-1;
    border-radius: 1.25rem;
    width: 4.0625rem;
    text-transform: uppercase;

    &--out-of-stock {
      background-color: $supporting-background-color-2;
      color: $supporting-color-2;
      width: 5.75rem;
    }

    @include tablet {
      height: 1.625rem;
    }
  }

  &__actions {
    display: flex;
    justify-content: space-between;
    margin-top: 0.5rem;
    margin-right: 1.625rem;
    width: 100%;

    @include tablet {
      justify-content: flex-end;
      align-items: center;
      gap: 0.5rem;
      margin-top: 0;
      margin-right: 0;
    }

    @include desktop {
      gap: 2.5rem;
    }
  }

  &__icon {
    width: 1.5rem;
    height: 1.5rem;
    cursor: pointer;
  }

  &__row {
    .inventory-table__cell-pair:nth-child(3) {
      order: -5;
    }
    .inventory-table__cell-pair:nth-child(1) {
      order: -4;
    }
    .inventory-table__cell-pair:nth-child(4) {
      order: -3;
    }
    .inventory-table__cell-pair:nth-child(2) {
      order: -2;
    }
    .inventory-table__cell-pair:nth-child(5) {
      order: -1;
    }

    @include tablet {
      .inventory-table__cell-pair:nth-child(1) {
        order: 1;
      }
      .inventory-table__cell-pair:nth-child(2) {
        order: 2;
      }
      .inventory-table__cell-pair:nth-child(3) {
        order: 3;
      }
      .inventory-table__cell-pair:nth-child(4) {
        order: 4;
      }
      .inventory-table__cell-pair:nth-child(5) {
        order: 5;
      }
    }
  }

  .inventory-table__actions {
    order: 5;
  }
}

